labels and version added

--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -875,7 +875,7 @@
   "static.planningUnit.conversionFactor": "São permitidos no máximo 10 dígitos e 2 dígitos após o decimal.",
   "static.common.back": "\nVoltar",
   "static.procurementUnit.unitsPerContainer": "Unidades por contêiner 40'",
-  "static.shipmentTooltip.pricePerPU": "Fornecido com base na seguinte ordem: preço do PA PU específico do programa (inserido pelo usuário) -\u003E preço do PA PU no nível da região -\u003E preço do PU específico do programa (inserido pelo usuário)",
+  "static.shipmentTooltip.pricePerPU": "Fornecido com base na seguinte ordem: preço do PA PU específico do programa (inserido pelo usuário) -> preço do PA PU no nível da região -> preço do PU específico do programa (inserido pelo usuário)",
   "static.tooltip.yAxisInEquivalencyUnit": "Se sim - o eixo Y é exibido em unidades de equivalência, o que permite que a previsão seja exibida em unidades programáticas e combinada com outros produtos que compartilham as mesmas unidades de equivalência. Administradores do programa: Usem a tela Unidades de Equivalência para gerenciar unidades de equivalência.",
   "static.dataentry.notesMaxLength": "Máximo de 600 caracteres",
   "static.extrapolation.EachPlanningUnit": "tela para cada unidade de planejamento e região que você deseja extrapolar",
@@ -1181,7 +1181,7 @@
   "static.supplyPlanFormula.inventoryTurns2L9": "No nível de país e/ou categoria de PU",
   "static.supplyPlanFormula.inventoryTurns2L8": "Se nenhum modo definitivo puder ser encontrado com base nas regras acima, os giros de estoque de nível do programa serão a média de todos os giros de estoque de PU sob esse programa",
   "static.datasourcetype.datasourcetype": "Tipo de fonte de dados",
-  "static.supplyPlanFormula.inventoryTurns2L5": "Se a contagem do valor MODE \u003C 3 (configuração variável), QAT usa AVG, se a contagem do valor MODE for \u003E 3 (configuração variável), então",
+  "static.supplyPlanFormula.inventoryTurns2L5": "Se a contagem do valor MODE < 3 (configuração variável), QAT usa AVG, se a contagem do valor MODE for > 3 (configuração variável), então",
   "static.scenarioPlanning.tab1": "Plano de Fornecimento de Cenário",
   "static.supplyPlanFormula.inventoryTurns2L4": "A primeira opção é procurar um modo.",
   "static.modelingCalculator.confirmAlert": "Deseja substituir a tabela existente?",
@@ -1237,7 +1237,7 @@
   "static.planningUnitSetting.existingShipments": "Embarques existentes (",
   "static.message.addTreeTemplate": "Modelo de árvore de previsão adicionado com sucesso",
   "static.login.loginAgain": "Faça login novamente para acessar o QAT no modo online.",
-  "static.tooltip.planningUnitSettings": "Os administradores do programa podem atualizar as configurações e notas da unidade de planejamento em Gerenciamento de programas \u003E Atualizar unidade de planejamento.",
+  "static.tooltip.planningUnitSettings": "Os administradores do programa podem atualizar as configurações e notas da unidade de planejamento em Gerenciamento de programas > Atualizar unidade de planejamento.",
   "static.CompareSelect.Graph": "Gráfico",
   "static.region.validcountry": "Insira um valor maior do que 0",
   "static.compareAndSelect.typeTitle": "C indica uma previsão de consumo, T indica uma Árvore de previsão.",
@@ -1263,7 +1263,7 @@
   "static.dataEntryAndAdjustments.AdjustedConsumption": "Consumo Ajustado",
   "static.listTree.purpose": "Objetivo",
   "static.sync.deleteLocalVersion": "- EXCLUIR versão local {{programCodeLocal}}",
-  "static.tooltip.conversionFactorPU": "Para obter mais detalhes, acesse Mestres de nível de reino \u003E Produtos \u003E Unidades de planejamento. Se os dados parecerem incorretos, envie um ticket no helpdesk do QAT.",
+  "static.tooltip.conversionFactorPU": "Para obter mais detalhes, acesse Mestres de nível de reino > Produtos > Unidades de planejamento. Se os dados parecerem incorretos, envie um ticket no helpdesk do QAT.",
   "static.label.noFundsAvailable": "Valor solicitado não disponível",
   "static.procurementUnit.lengthQtyText": "Insira o comprimento",
   "static.dataSource.program": "Programa",
@@ -1733,7 +1733,7 @@
   "static.showFormula.endingBalance4": "Demanda durante a falta de estoque (0 se for previsto)",
   "static.showFormula.endingBalance7": "Dias de falta de estoque",
   "static.report.orders": "Pedidos",
-  "static.showFormula.endingBalance6": "= 0 – Inventário projetado* – Demanda durante falta de estoque (* se o Estoque projetado for \u003C0)",
+  "static.showFormula.endingBalance6": "= 0 – Inventário projetado* – Demanda durante falta de estoque (* se o Estoque projetado for <0)",
   "static.dashboard.procurementagenttype": "Tipo de Agente de Aquisições",
   "static.showFormula.endingBalance1": "= Saldo inicial - Estoque expirado projetado + Remessas - Consumo + Ajustes",
   "static.showFormula.endingBalance3": "= Max (Inventário projetado, 0)",
@@ -2106,7 +2106,7 @@
   "static.ForecastSummary.ForecastSummary": "Resumo da previsão",
   "static.supplyPlanFormula.amcNote": "* Considere apenas valores diferentes de zero. Além disso, o mês atual está incluído nos meses no futuros para o cálculo do CMM",
   "static.equivalancyUnit.DisplayTheirForecast": "podem optar por exibir sua previsão na EU de “Tratamentos para QATite” e exibir sua previsão como 5.000 “Tratamentos para QATite” por mês.",
-  "static.commit.consumptionnotesvalid": "Somente letras, espaços, números e os caracteres ` ~ ! @ # $ % ^ & ( ) _ { } : \" \u003C \u003E ? , . ; ' [ ] / \\ * - + = | são permitidos. Verifique se há caracteres inválidos.",
+  "static.commit.consumptionnotesvalid": "Somente letras, espaços, números e os caracteres ` ~ ! @ # $ % ^ & ( ) _ { } : \" < > ? , . ; ' [ ] / \\ * - + = | são permitidos. Verifique se há caracteres inválidos.",
   "static.programPU.stockStatusMatrixMaxTooltip": "Se estiver planejando por quantidade, o valor máximo é calculado todo mês por mín + intervalo de reabastecimento* AMC. O valor exibido aqui é a média do ano.",
   "static.common.apr": "abr.",
   "static.ModelingTransfer.RollingPercentage": "uma porcentagem a cada mês, calculada no mês anterior como uma porcentagem contínua",
@@ -2308,7 +2308,7 @@
   "static.supplyPlanFormula.inventoryTurns2L14": "Regra: Se nenhum modo definitivo puder ser encontrado com base nas regras acima, então os giros de inventário de nível de categoria de país/PU serão a média de todos os giros de estoque de PU sob aquele país/categoria de PU",
   "static.supplyPlanFormula.inventoryTurns2L13": "Regra: Se a condição acima for encontrada várias vezes no conjunto de dados, QAT para usar o LOWEST inv. modo de voltas do grupo (por exemplo, País contém 1.000 PUs; 600 PUs têm voltas diferentes; 200 PUs têm voltas inv. = 1,6, outros 200 PUs têm voltas inv. = 2,2; QAT exibirá 1,6 como as voltas inv. para esse país/ categoria PU)",
   "static.supplyPlanFormula.inventoryTurns2L12": "O modo será determinado se o valor ocorrer em pelo menos 20% (configuração variável) do número total de unidades de planejamento desse país (ou categoria de PU)",
-  "static.supplyPlanFormula.inventoryTurns2L11": "Se a contagem do valor MODE \u003C 3 (configuração variável), QAT usa AVG, se a contagem do valor MODE for \u003E 3 (configuração variável), então",
+  "static.supplyPlanFormula.inventoryTurns2L11": "Se a contagem do valor MODE < 3 (configuração variável), QAT usa AVG, se a contagem do valor MODE for > 3 (configuração variável), então",
   "static.listTree.updateSuccessMessageSelected": "Suas unidades de planejamento selecionadas foram atualizadas com sucesso. Clique em criar árvore sem adicionar unidade de planejamento para duplicar a árvore.",
   "static.usageTemplate.continuous": "Contínua",
   "static.supplyPlanFormula.inventoryTurns2L10": "A primeira opção é procurar um modo.",
@@ -2608,7 +2608,7 @@
   "static.validated.minQplToleranceCutOff": "Por favor, insira o limite máximo de tolerância da lista de problemas QAT",
   "static.extrapolation.ExponentialSmoothing": "Suavização Exponencial Simples",
   "static.planningunit.maxGtin": "Máximo 14 dígitos",
-  "static.tree.invalidNodeError": "Seu nó \u003CnodeName\u003E possui o tipo de nó \u003CnodeType\u003E e o novo pai possui o tipo de nó \u003CparentNodeType\u003E que não é permitido. Edite o tipo de nó",
+  "static.tree.invalidNodeError": "Seu nó <nodeName> possui o tipo de nó <nodeType> e o novo pai possui o tipo de nó <parentNodeType> que não é permitido. Edite o tipo de nó",
   "static.program.import": "Importação de dados do programa",
   "static.supplyPlan.consumptionFEFO": "Cálculo de QAT (FEFO)",
   "static.forecastMethod.historicalData": "Consumo",
@@ -3359,7 +3359,7 @@
   "static.dashboard.monthlyForecast": "Previsão Mensal",
   "static.supplyplan.adjustmentDataEntry": "Inserção de dados de detalhe de ajustes e stock",
   "static.program.datasetDisplayName": "Nome de exibição do programa",
-  "static.tooltip.planningUnitNotes": "Os administradores do programa podem atualizar as notas da unidade de planejamento em Gerenciamento de programas \u003E Atualizar unidade de planejamento.",
+  "static.tooltip.planningUnitNotes": "Os administradores do programa podem atualizar as notas da unidade de planejamento em Gerenciamento de programas > Atualizar unidade de planejamento.",
   "static.report.shipmentSummeryReport": "Sumário dos Embarques",
   "static.ModelingTransfer.ExtrapolationNotAllowed": "A extrapolação não é permitida em um nó que também tenha uma transferência, seja de/para outro nó.",
   "static.commit.inventoryId": "ID do stock",
