--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -875,7 +875,7 @@
   "static.planningUnit.conversionFactor": "Se permiten un número máximo de 10 dígitos y 2 dígitos después del decimal.",
   "static.common.back": "Regresar",
   "static.procurementUnit.unitsPerContainer": "Unidades por contenedor de 40'",
-  "static.shipmentTooltip.pricePerPU": "Se proporciona según el siguiente orden: precio de PU de PA específico del programa (ingresado por el usuario) -\u003E precio de PU de PA a nivel de dominio -\u003E precio de PU de PA específico del programa (ingresado por el usuario)",
+  "static.shipmentTooltip.pricePerPU": "Se proporciona según el siguiente orden: precio de PU de PA específico del programa (ingresado por el usuario) -> precio de PU de PA a nivel de dominio -> precio de PU de PA específico del programa (ingresado por el usuario)",
   "static.tooltip.yAxisInEquivalencyUnit": "Si la respuesta es sí, el eje Y se muestra en unidades de equivalencia, lo que permite que la estimación se muestre en unidades programáticas y se combine con otros productos que comparten las mismas unidades de equivalencia. Administradores del programa: usen la pantalla Unidades de Equivalencia para administrar las unidades de equivalencia.",
   "static.dataentry.notesMaxLength": "Máximo 600 caracteres",
   "static.extrapolation.EachPlanningUnit": "pantalla para cada unidad de planificación y región que le gustaría extrapolar",
@@ -1181,7 +1181,7 @@
   "static.supplyPlanFormula.inventoryTurns2L9": "A nivel de categoría de país y/o PU",
   "static.supplyPlanFormula.inventoryTurns2L8": "Si no se puede encontrar un modo definitivo basado en las reglas anteriores, entonces los giros de inversión a nivel de programa serán el promedio de todos los giros de inventario de PU bajo ese programa.",
   "static.datasourcetype.datasourcetype": "Tipo de fuente de datos",
-  "static.supplyPlanFormula.inventoryTurns2L5": "Si el conteo del valor MODE \u003C 3 (configuración variable), QAT usa AVG, si el conteo del valor MODE es \u003E 3 (configuración variable), entonces",
+  "static.supplyPlanFormula.inventoryTurns2L5": "Si el conteo del valor MODE < 3 (configuración variable), QAT usa AVG, si el conteo del valor MODE es > 3 (configuración variable), entonces",
   "static.scenarioPlanning.tab1": "Plan de suministro de escenario",
   "static.supplyPlanFormula.inventoryTurns2L4": "La primera opción es buscar un modo.",
   "static.modelingCalculator.confirmAlert": "¿Quieres reemplazar la mesa existente?",
@@ -1237,7 +1237,7 @@
   "static.planningUnitSetting.existingShipments": "Pedidos existentes (",
   "static.message.addTreeTemplate": "Plantilla de árbol de estimación agregada con éxito",
   "static.login.loginAgain": "Vuelva a iniciar sesión para acceder a QAT en modo en línea.",
-  "static.tooltip.planningUnitSettings": "Los administradores del programa pueden actualizar la configuración y las notas de la unidad de planificación en Gestión del programa \u003E Actualizar unidad de planificación.",
+  "static.tooltip.planningUnitSettings": "Los administradores del programa pueden actualizar la configuración y las notas de la unidad de planificación en Gestión del programa > Actualizar unidad de planificación.",
   "static.CompareSelect.Graph": "Grafico",
   "static.region.validcountry": "Ingresar un valor mayor que 0",
   "static.compareAndSelect.typeTitle": "C indica un estimación de consumo, T indica un árbol de estimación.",
@@ -1263,7 +1263,7 @@
   "static.dataEntryAndAdjustments.AdjustedConsumption": "Consumo ajustado",
   "static.listTree.purpose": "Objetivo",
   "static.sync.deleteLocalVersion": "- ELIMINAR versión local {{programCodeLocal}}",
-  "static.tooltip.conversionFactorPU": "Para obtener más detalles, vaya a Realm Level Masters \u003E Productos \u003E Unidades de planificación. Si los datos parecen incorrectos, envíe un ticket al servicio de asistencia técnica de QAT.",
+  "static.tooltip.conversionFactorPU": "Para obtener más detalles, vaya a Realm Level Masters > Productos > Unidades de planificación. Si los datos parecen incorrectos, envíe un ticket al servicio de asistencia técnica de QAT.",
   "static.label.noFundsAvailable": "Cantidad solicitada no disponible",
   "static.procurementUnit.lengthQtyText": "Ingresar longitud",
   "static.dataSource.program": "Programa",
@@ -1733,7 +1733,7 @@
   "static.showFormula.endingBalance4": "Demanda durante el desabastecimiento (0 si estimada)",
   "static.showFormula.endingBalance7": "Días de desabastecimiento",
   "static.report.orders": "Pedidos",
-  "static.showFormula.endingBalance6": "= 0 – Inventario Proyectado* – Demanda durante el desabastecimiento (* si el Inventario Proyectado es \u003C0)",
+  "static.showFormula.endingBalance6": "= 0 – Inventario Proyectado* – Demanda durante el desabastecimiento (* si el Inventario Proyectado es <0)",
   "static.dashboard.procurementagenttype": "Tipo de agente de compras",
   "static.showFormula.endingBalance1": "= Saldo de Apertura - Stock Vencido Proyectado + Envíos - Consumo + Ajustes",
   "static.showFormula.endingBalance3": "= Max (Inventario Proyectado, 0)",
@@ -2106,7 +2106,7 @@
   "static.ForecastSummary.ForecastSummary": "Resumen de estimación",
   "static.supplyPlanFormula.amcNote": "* Considere solo valores distintos de cero. También el mes actual se incluye en los meses futuros para calcular el CMM",
   "static.equivalancyUnit.DisplayTheirForecast": "podría optar por mostrar su estimación en la EU de Tratamientos para QATitis y mostrar su estimación como 5,000 Tratamientos para QATitis por mes en su lugar.",
-  "static.commit.consumptionnotesvalid": "¡Solo letras, espacios, números y los caracteres ` ~ ! @ # $ % ^ & ( ) _ { } : \" \u003C \u003E ? , . ; ' [ ] / \\ * - + = | están permitidos. Compruebe si hay caracteres no válidos.",
+  "static.commit.consumptionnotesvalid": "¡Solo letras, espacios, números y los caracteres ` ~ ! @ # $ % ^ & ( ) _ { } : \" < > ? , . ; ' [ ] / \\ * - + = | están permitidos. Compruebe si hay caracteres no válidos.",
   "static.programPU.stockStatusMatrixMaxTooltip": "Si se planifica por cantidad, el valor máximo se calcula cada mes mediante el Mín + frecuencia de reorden * AMC. El valor que se muestra aquí es el promedio del año.",
   "static.common.apr": "Abr",
   "static.ModelingTransfer.RollingPercentage": "un porcentaje cada mes, calculado sobre el mes anterior como un porcentaje móvil",
@@ -2308,7 +2308,7 @@
   "static.supplyPlanFormula.inventoryTurns2L14": "Regla: si no se puede encontrar un modo definitivo basado en las reglas anteriores, entonces los giros de inversión a nivel de categoría de país/PU serán el promedio de todos los giros de inventario de PU bajo esa categoría de país/PU",
   "static.supplyPlanFormula.inventoryTurns2L13": "Regla: si la condición anterior se encuentra varias veces en el conjunto de datos, QAT debe usar la inversión MÁS BAJA. modo de giros del grupo (p. ej., el país contiene 1000 UP; 600 UP tienen giros diferentes; 200 UP tienen giros inv. = 1,6, otras 200 UP tienen giros inv. = 2,2; QAT mostrará 1,6 como giros inv. para ese país/ categoría PU)",
   "static.supplyPlanFormula.inventoryTurns2L12": "La moda se determinará si el valor se produce en al menos el 20 % (configuración variable) del número total de productos de ese país (o categoría de PU).",
-  "static.supplyPlanFormula.inventoryTurns2L11": "Si el conteo del valor MODE \u003C 3 (configuración variable), QAT usa AVG, si el conteo del valor MODE es \u003E 3 (configuración variable), entonces",
+  "static.supplyPlanFormula.inventoryTurns2L11": "Si el conteo del valor MODE < 3 (configuración variable), QAT usa AVG, si el conteo del valor MODE es > 3 (configuración variable), entonces",
   "static.listTree.updateSuccessMessageSelected": "Los productos seleccionados se han actualizado correctamente. Haga clic en crear árbol sin agregar productos para duplicar el árbol.",
   "static.usageTemplate.continuous": "Continua",
   "static.supplyPlanFormula.inventoryTurns2L10": "La primera opción es buscar un modo.",
@@ -2608,7 +2608,7 @@
   "static.validated.minQplToleranceCutOff": "Introduzca el límite máximo de tolerancia de QPL",
   "static.extrapolation.ExponentialSmoothing": "Suavizado exponencial simple",
   "static.planningunit.maxGtin": "Se permiten 14 dígitos como máximo",
-  "static.tree.invalidNodeError": "Su nodo \u003CnodeName\u003E tiene el tipo de nodo \u003CnodeType\u003E y el nuevo padre tiene el tipo de nodo \u003CparentNodeType\u003E que no está permitido. Por favor edite el tipo de nodo",
+  "static.tree.invalidNodeError": "Su nodo <nodeName> tiene el tipo de nodo <nodeType> y el nuevo padre tiene el tipo de nodo <parentNodeType> que no está permitido. Por favor edite el tipo de nodo",
   "static.program.import": "Importar datos del programa",
   "static.supplyPlan.consumptionFEFO": "Cálculo de QAT (FEFO)",
   "static.forecastMethod.historicalData": "Consumo",
@@ -3359,7 +3359,7 @@
   "static.dashboard.monthlyForecast": "Estimación mensual",
   "static.supplyplan.adjustmentDataEntry": "Captura de datos de ajustes e inventario",
   "static.program.datasetDisplayName": "Nombre de visualización del programa",
-  "static.tooltip.planningUnitNotes": "Los administradores del programa pueden actualizar las notas de la unidad de planificación en Gestión del programa \u003E Actualizar unidad de planificación.",
+  "static.tooltip.planningUnitNotes": "Los administradores del programa pueden actualizar las notas de la unidad de planificación en Gestión del programa > Actualizar unidad de planificación.",
   "static.report.shipmentSummeryReport": "Resumen de los pedidos",
   "static.ModelingTransfer.ExtrapolationNotAllowed": "No se permite la extrapolación en un nodo que también tiene una transferencia, ya sea hacia o desde otro nodo.",
   "static.commit.inventoryId": "Identificador del inventario",
