--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3428,5 +3428,9 @@
     "static.currency.conversionrateusd": "Conversion rate to 1 USD",
     "static.logout.confirmLogout": "Are you sure you want to log out?",
     "static.common.node": "Node",
-    "static.pipeline.pipelineConvertorLinux": "Linux."
+    "static.pipeline.pipelineConvertorLinux": "Linux.",
+    "static.realm.noOfMonthsInFutureForTopDashboard":"No of months in future for top dashboard",
+    "static.realm.noOfMonthsInPastForBottomDashboard":"No of months in part for bottom dashboard",
+    "static.validated.restrictionNoOfMonthsInFutureForTopDashboard":"Please enter No of months in future for top dashboard",
+    "static.validated.restrictionNoOfMonthsInPastForBottomDashboard":"Please enter No of months in past for bottom dashboard"
 }
