--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3453,6 +3453,7 @@
     "static.stockStatus.endingBalanceTooltipEU":"Sum of selected programs’ & planning units’ ending balances each month after converting to EU. Bolded if all programs have an actual inventory count in the current month",
     "static.stockStatus.amcTooltipSingleProgram":"Dynamic value based on user-entered number of months past & future in the Update PU screen",
     "static.stockStatus.amcTooltipMultiProgram":"Sum of the individually calculated AMC values for selected programs each month",
-    "static.stockStatus.amcTooltipEU":"Sum of the individually calculated AMC values for selected programs & planning units each month after converting to EU"
-    
+    "static.stockStatus.amcTooltipEU":"Sum of the individually calculated AMC values for selected programs & planning units each month after converting to EU",
+    "static.stockStatus.onlyShowPUsThatArePartOfAllPrograms":"Only show PUs/ARUs that are available in ALL selected programs",
+    "static.stockStatus.doYouWantToAggregate":"Do you want to aggregate selected programs"
 }
