--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3458,5 +3458,6 @@
     "static.stockStatus.doYouWantToAggregate":"Do you want to aggregate selected programs",
     "static.common.allitemsselected":"All items are selected.",
     "static.treeTemplate.returnToList":"Tree Templates",
-    "static.treeTemplate.monthSelector":"Month Selector"
+    "static.treeTemplate.monthSelector":"Month Selector",
+    "static.supplyPlan.importIntoSP":"Import Into Supply Plan"
 }
