--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3464,5 +3464,6 @@
     "static.realm.noOfMonthsInFutureForTopDashboard":"No of months in future for top dashboard",
     "static.realm.noOfMonthsInPastForBottomDashboard":"No of months in part for bottom dashboard",
     "static.validated.restrictionNoOfMonthsInFutureForTopDashboard":"Please enter No of months in future for top dashboard",
-    "static.validated.restrictionNoOfMonthsInPastForBottomDashboard":"Please enter No of months in past for bottom dashboard"
+    "static.validated.restrictionNoOfMonthsInPastForBottomDashboard":"Please enter No of months in past for bottom dashboard",
+    "static.forecastMonthlyErrorReport.showConsumption":"Show consumption adjusted for stock out?"
 }
