--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3428,5 +3428,7 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux."
+  "static.pipeline.pipelineConvertorLinux": "Linux.",
+  "static.forecastMonthlyErrorReport.showConsumption": "Show consumption adjusted for stock out?",
+  "static.common.allitemsselected": "All items are selected"
 }
