labels added and version changed

--- a/src/assets/img/locales/fr.json
+++ b/src/assets/img/locales/fr.json
@@ -456,6 +456,7 @@
   "static.extrapolation.ARIMAModel": "Modèle ARIMA saisonnier",
   "static.ForecastSummary.EnableUser": "Permet aux utilisateurs de voir un résumé de leurs prévisions finales (sélectionnées) pour toute la période de prévision. Pour visualiser les prévisions par mois, utilisez la",
   "static.extrapolation.PoorerData": "Si vous avez des données de faible qualité (données manquantes, taux de rapportage variables,",
+  "static.common.allitemsselected": "Tous les éléments sont sélectionnés",
   "static.realm.decimalNotAllow": "Décimal non autorisé",
   "static.region.glntext": "Entrer GLN",
   "static.extrapolation.AlongLeftHand": "Le long de la marge de gauche se trouvent les différentes méthodes d'extrapolation disponibles dans QAT. L'utilisateur peut en sélectionner une ou plusieurs, en fonction du modèle général de consommation et des données disponibles, comme cela sera discuté ci-dessous.",
@@ -3399,6 +3400,7 @@
   "static.program.planleadtime": "Délai entre la plannification et la soumission `Planifié à soumis` (en mois)",
   "static.report.includeapproved": "Utiliser uniquement le plan d`approvisionnement approuvé",
   "static.program.savedBy": "par",
+  "static.forecastMonthlyErrorReport.showConsumption": "Afficher la consommation ajustée aux ruptures de stock ?",
   "static.supplyPlan.currentAndFuture": "actuel + futur",
   "static.mt.reminders2D4d": "2",
   "static.mt.reminders2D4e": "Pack de 100 tablettes de chocolat",
