--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -456,6 +456,7 @@
   "static.extrapolation.ARIMAModel": "Modelo ARIMA estacional",
   "static.ForecastSummary.EnableUser": "Permita que los usuarios vean un resumen de sus estimaciones finales (seleccionadas) para todo el período de estimación. Para ver las estimaciones por mes, utilice el",
   "static.extrapolation.PoorerData": "Si tiene datos más deficientes (puntos de datos faltantes, tasas de reportaje variables,",
+  "static.common.allitemsselected": "Todos los artículos están seleccionados",
   "static.realm.decimalNotAllow": "No se permiten decimales",
   "static.region.glntext": "Ingresar GLN",
   "static.extrapolation.AlongLeftHand": "A lo largo del margen izquierdo se encuentran los diferentes métodos de extrapolación disponibles en QAT. El usuario puede seleccionar uno o varios, según corresponda al patrón general de consumo y los datos disponibles, como se discutirá a continuación.",
@@ -3399,6 +3400,7 @@
   "static.program.planleadtime": "Tiempo de espera desde planificado hasta ordenado (en meses)",
   "static.report.includeapproved": "Utilizar únicamente plan de suministro aprobado",
   "static.program.savedBy": "por",
+  "static.forecastMonthlyErrorReport.showConsumption": "¿Mostrar el consumo ajustado por desabastecimiento?",
   "static.supplyPlan.currentAndFuture": "presente + futuro",
   "static.mt.reminders2D4d": "2",
   "static.mt.reminders2D4e": "Paquete de 100 barras de chocolate",
