--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -456,6 +456,7 @@
   "static.extrapolation.ARIMAModel": "Seasonal ARIMA Model",
   "static.ForecastSummary.EnableUser": "Enable users to see a summary of their final (selected) forecasts for the entire forecast period. To view the forecasts by month, use the",
   "static.extrapolation.PoorerData": "If you have poorer data (missing data points, variable reporting rates,",
+  "static.common.allitemsselected": "All items are selected",
   "static.realm.decimalNotAllow": "Decimal number not allowed",
   "static.region.glntext": "Enter GLN",
   "static.extrapolation.AlongLeftHand": "Along the left-hand margin are the different extrapolation methods available in QAT. The user may select one -or several, as appropriate to the general consumption pattern and available data as will be discussed below.",
@@ -3399,6 +3400,7 @@
   "static.program.planleadtime": "`Planned to Submitted` Lead Time (months)",
   "static.report.includeapproved": "Use Approved Supply Plans Only",
   "static.program.savedBy": "by",
+  "static.forecastMonthlyErrorReport.showConsumption": "Show consumption adjusted for stock out?",
   "static.supplyPlan.currentAndFuture": "current + future",
   "static.mt.reminders2D4d": "2",
   "static.mt.reminders2D4e": "Pack of 100 chocolate bars",
@@ -3428,7 +3430,5 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux.",
-  "static.forecastMonthlyErrorReport.showConsumption": "Show consumption adjusted for stock out?",
-  "static.common.allitemsselected": "All items are selected"
+  "static.pipeline.pipelineConvertorLinux": "Linux."
 }
