--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -1171,6 +1171,7 @@
   "static.report.version": "Versión",
   "static.tree.singleUse": "De un solo uso",
   "static.treeTable.updateNotes": "Nota: Los valores calculados en celdas grises solo se recalculan después de hacer clic en `Actualizar`.",
+  "static.tree.parentName": "Nombre del padre",
   "static.quantimed.regionConversionFactor": "Factor de conversión de región",
   "static.forecastMethod.forecastMethod": "Método de estimación",
   "static.tooltip.SingleUse": "En caso afirmativo, no se requiere frecuencia ni duración",
@@ -1589,6 +1590,7 @@
   "static.formula.suggestedText32": "Paso 3: el producto no tiene suficiente stock durante 3 meses consecutivos: enero de 2022, febrero de 2022, marzo de 2022, todos tienen un MOS (10, 9,4 y 8,4) inferior al MOS mínimo (12).",
   "static.report.qatPIDFID": "ID de producto / ID de producto (estimación)",
   "static.tree.blank": "Construye tu propio árbol de estimación",
+  "static.tree.availableToBeAggregated": "Disponible para ser agregada por nodos de embudo.",
   "static.message.addFailed": "No se pudo agregar {{entityname}}",
   "static.supplyPlan.addNewShipment": "Agregar nuevo pedido",
   "static.user.accessControlText": "Control de acceso",
@@ -1694,6 +1696,7 @@
   "static.realmcountry.arrivedToDeliveredLeadTime": "Tiempo de espera desde llegado hasta entregado (en meses)",
   "static.supplyPlanFormula.inventoryTurns3L1": "MAPE = (Rotación de inventario real - Rotación de inventario planificada) / Rotación de inventario real",
   "static.tooltip.UsagePeriod": "La duración del período de uso. Para uso continuo, elija indefinidamente",
+  "static.tree.source": "Fuente",
   "static.supplyPlan.validationFailed": "Validación fallida",
   "static.supplyPlan.manualOrderQty": "Cantidad de pedido manual",
   "static.common.percentageregex": "Solo se permiten números entre 0 y 100",
@@ -1733,8 +1736,8 @@
   "static.showFormula.endingBalance5": "= (Consumo real * Días desabastecidos) / (Días en mes – Días desabastecidos)",
   "static.showFormula.endingBalance4": "Demanda durante el desabastecimiento (0 si estimada)",
   "static.showFormula.endingBalance7": "Días de desabastecimiento",
-  "static.report.orders": "Pedidos",
   "static.showFormula.endingBalance6": "= 0 – Inventario Proyectado* – Demanda durante el desabastecimiento (* si el Inventario Proyectado es <0)",
+  "static.report.orders": "Pedidos",
   "static.dashboard.procurementagenttype": "Tipo de agente de compras",
   "static.showFormula.endingBalance1": "= Saldo de Apertura - Stock Vencido Proyectado + Envíos - Consumo + Ajustes",
   "static.showFormula.endingBalance3": "= Max (Inventario Proyectado, 0)",
@@ -1899,6 +1902,7 @@
   "static.fundingsource.realm": "Dominio",
   "static.forecastErrorReport.noActualData": "El mes actual no contiene el consumo real.",
   "static.supplyPlan.forecastedConsumption": "Consumo estimado",
+  "static.tree.funnelNode": "Nodo de embudo",
   "static.unit.unitCode": "Codigo de la unidad",
   "static.versionSettings.calendardays": "Días calendario",
   "static.program.errortext": "Se produjo un error. Por favor intentar de nuevo.",
@@ -1945,6 +1949,7 @@
   "static.extrapolation.ConfidenceIntervalText": "entre 78 % y 99 % (exclusivo), por ejemplo, un nivel de confianza del 90% indica que el 90% de los puntos futuros se encontrarán dentro de este radio de predicción.",
   "static.compareVersion.selectedForecastQtyTitle": "Cantidad estimada para todo el período de estimación.",
   "static.ManageTree.RateOfChange": "Permite al usuario especificar la tasa de cambio exacta",
+  "static.tree.notUsed": "No utilizada por ningún nodo.",
   "static.logoutError": "Error al cerrar sesión",
   "static.report.stock": "Stock",
   "static.supplyPlan.addNewBatchInfo": "Agregar nuevo lote",
@@ -1995,6 +2000,7 @@
   "static.ForecastSummary.Freight": "Flete",
   "static.dashboard.dataEntryAndAdjustment": "Ingreso y Ajuste de Consumos",
   "static.validNoSpace.string": "No se permiten espacios al principio, al final, o en medio",
+  "static.tree.sourceNode": "Nodo de origen",
   "static.program.zipfilereaderror": "Ocurrió un error al leer el archivo zip",
   "static.importFromQATSupplyPlan.supplyPlanProgrmRegion": "Programa Plan de Abastecimiento (Región)",
   "static.supplyPlan.addOrListBudget": "Agregar presupuesto al pedido",
@@ -2041,6 +2047,7 @@
   "static.dataentry.otherUnitName": "Ingrese el nombre de otra unidad",
   "static.program.organisation": "Organización",
   "static.commitTree.note": "Nota: verifique todas las pestañas y filas en busca de conflictos, que están resaltados en amarillo. Para resolver conflictos, haga clic derecho en la línea y seleccione \"Aceptar versión local\" o \"Aceptar versión del servidor\". Los conflictos deben resolverse antes de poder cargar las versiones.",
+  "static.tree.aggregatedBy": "Agregado por los siguientes nodos de embudo",
   "static.commitTree.modeling": "Modelado",
   "static.NodeData.ExtrapolationData": "Permite a los usuarios utilizar datos históricos para extrapolar cambios futuros. Habilite esta función marcando la casilla \"Extrapolación\". Tenga en cuenta que si lo hace, la pestaña Modelado/Transferencia se ocultará ya que solo es posible usar una a la vez. Se borrarán todos los datos ingresados previamente en la pestaña Modelado/Transferencia.",
   "static.treeTemplate.listTreeTemplateTooltip": "Haga clic izquierdo en cualquier plantilla de árbol para obtener una vista previa. Haga clic con el botón derecho para crear un árbol a partir de una plantilla (solo disponible para plantillas a partir de nodos de agregación o numéricos).",
@@ -2212,6 +2219,7 @@
   "static.country.countryMaster": "País",
   "static.message.user.forgotPasswordSuccess": "Se le ha enviado un correo electrónico con un enlace para restablecer la contraseña",
   "static.loadDelDataset.deleteAllOlderVersion": "¿Desea eliminar toda la versión anterior y conservar solo la última versión?",
+  "static.shipment.shipmentCostOverviewNotes": "No se encontraron envíos. Asegúrese de tener envíos dentro de este período de tiempo. Si se selecciona \"Informe basado en la fecha de envío\", asegúrese de haber ingresado manualmente las fechas de envío reales haciendo clic derecho en los registros de envío y seleccionando \"Mostrar fechas de envío\".",
   "static.procurementAgentPlanningUnit.validUnitsPerContainer": "Ingresar el no. de unidades por contenedor de 40'",
   "static.report.exportWordDoc": "Exportar a documento de Word",
   "static.usageTemplate.frequency": "Frecuencia",
@@ -2318,6 +2326,7 @@
   "static.common.cancel": "Cancelar",
   "static.supplyPlan.openingBalance": "Stock inicial",
   "static.organisation.organisationcodemax10digittext": "La longitud del nombre para mostrar debe tener 10 caracteres.",
+  "static.tree.hideFunnel": "Ocultar conexiones de nodos de embudo",
   "static.program.programadd": "Agregar programa",
   "static.tree.autoCalculate": "Calcular automáticamente",
   "static.region.duplicateRegion": "Se encontró una región duplicada",
@@ -2478,6 +2487,7 @@
   "static.message.user.languageChangeError": "Ocurrió un error al cambiar el idioma",
   "static.supplyPlan.batchQty": "Cantidad de lote",
   "static.importFromQATSupplyPlan.allValuesBelowAreInSupplyPlanningUnits.": "Todos los valores siguientes están en Productos (planificación) de suministro.",
+  "static.tree.sourceNodeDesc": "Nodo de origen (disponible para ser agregado por nodos de embudo)",
   "static.language.language": "Idioma",
   "static.tooltip.autoCalculate": "Si QAT es lento mientras edita su árbol, desmarque la casilla de cálculo automático para detener los cálculos. Tenga en cuenta que todos los números calculados pueden estar equivocados. Para actualizar los cálculos, vuelva a marcar la casilla de verificación `auto-calcular` o haga clic en el icono de recalcular.",
   "static.loadDelDataset.allOlderModifiedVersion": "Todas las versiones anteriores modificadas/no modificadas, incluida la última versión, se eliminarán y se descargará la nueva versión más reciente. ¿Desea continuar?",
