--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3488,7 +3488,7 @@
   "static.dashboard.qatProblemTooltip":"",
   "static.dashboard.lastUpdatedDateTooltip":"",
   "static.dashboard.reviewStatusTooltip":"Status and date are based on the latest final version uploaded to the server",
-  "static.forecast.compareAndSelectRangeInfo":"Between the highest and lowest consumption forecast"
+  "static.forecast.compareAndSelectRangeInfo":"Between the highest and lowest consumption forecast",
   "static.common.accessDenied":"You do not access to view or edit this resource",
   "static.message.addUpdateSuccess": "{{entityname}} added/updated successfully"
 }
